--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.6",
     "@capacitor/app": "1.0.3",
     "@capacitor/core": "3.2.4",
     "@capacitor/haptics": "1.1.0",
@@ -20,6 +21,8 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.22.0",
+    "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "graphql": "^15.6.1",
     "ionicons": "^5.4.0",
     "react": "^17.0.1",
